fix bugs add home page

--- a/src/Components/NavBar/navbar.css
+++ b/src/Components/NavBar/navbar.css
@@ -7,3 +7,9 @@
     font-weight: bold;
     outline: none !important;
 }
+.full-zindex{
+z-index: 99;
+}
+.nav-wrapper{
+    padding-bottom: 60px;
+}
